--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -37,7 +37,7 @@
             <span class="tooltip">History Log</span>
         </li>
         <li>
-            <a href="/login">
+            <a href="/logout">
                 <i class="bx bxs-log-out"></i>
                 <span class="nav-item">Logout</span>
             </a>
