updated css styling

--- a/public/style.css
+++ b/public/style.css
@@ -92,8 +92,8 @@
     align-content: center;
 }
 
-label{
-    /* use different color */
+.remember-me {
+    color: white;
     margin-left: 4px;
     font-size: 16px;
 }
@@ -653,10 +653,11 @@ select#age:focus, select#reason-hiv:focus, select#vulnerable-population:focus, s
     color: #E2FFED;
 }
 
-.details {
+.headline {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .error {
