--- a/views/history.hbs
+++ b/views/history.hbs
@@ -59,7 +59,7 @@
         <h1>History Log</h1>
     </div>
     <div class="container-for-loginhistory">
-        <h2 class="details">Login History</h2>
+        <h2 class="headline">Login History</h2>
         <table class="history-log">
             <thead>
                 <tr>
@@ -83,7 +83,7 @@
         </table>
     </div>
     <div class="container-for-actionhistory">
-        <h2 class="details">Action History</h2>
+        <h2 class="headline">Action History</h2>
         <table class="history-log">
             <thead>
                 <tr>
