--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <div class="miniform-group">
                     <input type="checkbox" id="remember-me" name="remember-me">
-                    <label for="remember-me">Remember for 30 days</label>
+                    <label class="remember-me">Remember for 30 days</label>
                 </div>
                 <div class="miniform-group">
                     <p class="forgot-page"><a class="register" href="/forgotpassword">Forgot Password?</a></p>
