updated tracker hbs file

--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -63,7 +63,7 @@
                 <div class="container-for-fields">
                     <div class="field">
                         <label for="baranggay" class="data-label">Barangay:</label>
-                        <input type="text" id="baranggay" name="baranggay" class="data-input" required>
+                        <input type="number" id="baranggay" name="baranggay" class="data-input" min="1" max="188" required>
                     </div>
 
                     <div class="field"> 
