--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -13,13 +13,13 @@
         
         <form name="read-user" action="read-user" method="post">
             <div class="form-group">
-                <input name="email" id="email-field" type="text" placeholder="Email"></input>
+                <input name="email" id="email-field" type="text" placeholder="Email" required></input>
             </div>
             <div class="form-group">
-                <input name="password" id="password-field" type="password" placeholder="Enter New Password"></input>
+                <input name="password" id="password-field" type="password" placeholder="Enter New Password" minlength="8" required></input>
             </div>
             <div class="form-group">
-                <input name="password" id="password-field" type="password" placeholder="Confirm New Password"></input>
+                <input name="password" id="password-field" type="password" placeholder="Confirm New Password" minlength="8" required></input>
             </div>
             
             <input type="submit" class="registration" value="Change Password"></input>
