--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -87,14 +87,14 @@
                 <div class="profile-input-field">
 
                     <label for="name" class="profile-label">EMAIL</label>
-                    <input type="text" class="profile-textarea">
+                    <input type="email" class="profile-textarea">
 
                 </div>
 
                 <div class="profile-input-field">
 
                     <label for="current-password" class="profile-label">PASSWORD</label>
-                    <input type="text" class="profile-textarea">
+                    <input type="password" class="profile-textarea">
 
                 </div>
 
