--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -11,7 +11,7 @@
         <p class="main"><b>Forgot Password?</b></p>
         <p class="details">Enter New Password</p>
         
-        <form name="read-user" action="read-user" method="post">
+        <form name="read-user" action="forgot-password" method="post">
             <div class="form-group">
                 <input name="email" id="email-field" type="text" placeholder="Email" required></input>
             </div>
@@ -19,7 +19,7 @@
                 <input name="password" id="password-field" type="password" placeholder="Enter New Password" minlength="8" required></input>
             </div>
             <div class="form-group">
-                <input name="password" id="password-field" type="password" placeholder="Confirm New Password" minlength="8" required></input>
+                <input name="confirmPassword" id="password-field" type="password" placeholder="Confirm New Password" minlength="8" required></input>
             </div>
             
             <input type="submit" class="registration" value="Change Password"></input>
