--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -49,7 +49,7 @@
         <img src="./gabay-logo.jpeg" alt="gabay org" class="user-img">
         <div class="div">
             <p class="bold">{{user.name}}</p>
-            <p>{{#if user.isAdmin}}Admin{{else}}User{{/if}}</p>
+            <p>{{user.role}}</p>
         </div>
     </div>
 </div>
