--- a/views/history.hbs
+++ b/views/history.hbs
@@ -48,8 +48,8 @@
     <div class="user">
         <img src="./gabay-logo.jpeg" alt="gabay org" class="user-img">
         <div class="div">
-            <p class="bold">User's Name</p>
-            <p>Admin</p>
+            <p class="bold">{{user.name}}</p>
+            <p>{{user.role}}</p>
         </div>
     </div>
 </div>
