implemented displaying of statistics from the db to dashboard

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -81,21 +81,21 @@
         <div class="total">
             <div id="stats">
                 <p class="stats-title"><b>Total Patients Tested</b></p>
-                <p class="number">890</p>
+                <p class="number">{{statistics.totalPatientsTested}}</p>
             </div>
             <i id="icon-stats" class="bx bxs-group"></i>
         </div>
         <div class="positive">
             <div id="stats">
                 <p class="stats-title"><b>Positive Patients Tested</b></p>
-                <p class="number">90</p>
+                <p class="number">{{statistics.positivePatientsTested}}</p>
             </div>
             <i id="icon-stats" class="bx bxs-user-plus"></i>
         </div>
         <div class="negative">
             <div id="stats">
                 <p class="stats-title"><b>Negative Patients Tested</b></p>
-                <p class="number">800</p>
+                <p class="number">{{statistics.negativePatientsTested}}</p>
             </div>
             <i id="icon-stats" class="bx bxs-user-minus"></i>
         </div>
