--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -139,4 +139,8 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <p>&copy; 2024 HIV Advocacy Database. All rights reserved.</p>
+    </div>
 </div>
