--- a/views/history.hbs
+++ b/views/history.hbs
@@ -58,6 +58,7 @@
     <div class="header">
         <h1>History Log</h1>
     </div>
+    
     <div class="container-for-loginhistory">
         <h2 class="headline">Login History</h2>
         <table class="history-log">
@@ -79,6 +80,7 @@
             </tbody>
         </table>
     </div>
+
     <div class="container-for-actionhistory">
         <h2 class="headline">Action History</h2>
         <table class="history-log">
@@ -101,5 +103,9 @@
                 {{/each}}
             </tbody>
         </table>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 HIV Advocacy Database. All rights reserved.</p>
     </div>
 </div>
