--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -178,4 +178,8 @@
                 <input type="submit" class="submit-button" value="Submit">
             </div>
         </form>
+
+    <div class="footer">
+        <p>&copy; 2024 HIV Advocacy Database. All rights reserved.</p>
+    </div>
 </div>
