--- a/views/history.hbs
+++ b/views/history.hbs
@@ -64,7 +64,8 @@
         <table class="history-log">
             <thead>
                 <tr>
-                    <th>ADMIN'S NAME</th>
+                    <th>NAME</th>
+                    <th>ROLE</th>
                     <th>EMAIL ADDRESS</th>
                     <th>LAST LOGIN DATE/TIME</th>
                 </tr>
@@ -73,6 +74,7 @@
                 {{#each loginHistory}}
                 <tr>
                     <td>{{this.name}}</td>
+                    <td>{{this.role}}</td>
                     <td>{{this.email}}</td>
                     <td>{{formatDate this.lastLoginDateTime}}</td>
                 </tr>
@@ -86,7 +88,8 @@
         <table class="history-log">
             <thead>
                 <tr>
-                    <th>ADMIN'S NAME</th>
+                    <th>NAME</th>
+                    <th>ROLE</th>
                     <th>EMAIL ADDRESS</th>
                     <th>ACTION</th>
                     <th>ACTION DATE/TIME</th>
@@ -96,6 +99,7 @@
                 {{#each actionHistory}}
                 <tr>
                     <td>{{this.name}}</td>
+                    <td>{{this.role}}</td>
                     <td>{{this.email}}</td>
                     <td>{{this.action}}</td>
                     <td>{{formatDate this.actionDateTime}}</td> 
